@startuml


hide circle


skinparam linetype ortho

entity user {
  * **id**  :  int
  __
  **login**  :  varchar
  **password**  :  varchar
  **user_name**  :  varchar
}

entity chat {
  * **id**  :  int
  __
  **chat_name**  :  varchar
  **description**  :  varchar
  **author_id**  :  int
  **create_time**  :  date
  **update_name**  :  date
}

entity chat_members {
  * **id_chat**  :  int
  * **id_user**  :  int
    --
  **alive**  :  bool
  **banned**  :  bool
}

entity chat_message {
  * **id_chat**  :  int
  * **id_user**  :  int
    --
  **text**  :  varchar
  **date**  :  date
}


chat }o--|| user
chat_members }o--|| chat
chat_message }o--|| chat
chat_members }o--|| user
chat_message }o--|| user


@enduml
